# vebosity-fiesta

./: .gitattributes  .gitignore  CMakeLists.txt  Cpp is better  Makefile  Makefile.old  README.md  devbuild.sh  doubling-model.py  dtypes.cpp  dtypes.h  dtypes.hpp  example.cpp  hello.c  main.cpp  main.hpp  model.cpp  model.hpp  model.py  softwarerender.cpp  softwarerender.hpp  test.py
testing-include/: draw.c  olive.c
